implement ir generation for number literals

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,6 +21,9 @@ OBJS =  \
 	my-language/parser/IfParser.o \
 	my-language/parser/WhileParser.o \
 	my-language/parser/FunctionCallParser.o \
+	my-language/ir-generator/IRGenerator.o \
+	my-language/ir-generator/IRCommand.o \
+	my-language/ir-generator/IRCommandFactory.o \
 	components/tokenization/Tokenization.o \
 	components/text/RegexPattern.o \
 	components/parsing/OperatedChainParser.o \
@@ -39,10 +42,11 @@ OBJS =  \
 TEST_OBJS = \
 	my-language/tokenizer/test/Tokenizer.test.o \
 	my-language/parser/test/Parser.test.o \
+	my-language/ir-generator/test/IRGenerator.test.o \
 	components/parsing/test/OperatedChainParser.test.o \
 
 TEST_OBJ = \
-	my-language/parser/test/Parser.test.o
+	my-language/ir-generator/test/IRGenerator.test.o
 
 # Here is a Make Macro defined by two Macro Expansions.
 # A Macro Expansion may be treated as a textual replacement of the Make Macro.
